bugs and adding japanese translations

--- a/hktm/templates/404.html
+++ b/hktm/templates/404.html
@@ -4,7 +4,7 @@
 
 <div class="container">
   <div class="jumbotron">
-    <p>This page does not exist</p>
+    <p>このページは存在しません。</p>
   </div>
 </div>
 
