--- a/hktm/users/templates/users/register.html
+++ b/hktm/users/templates/users/register.html
@@ -3,9 +3,9 @@
 {% block content %}
 <div class="container-sm">
   <div class="jumbotron">
-    <h1 class="display-4">今まで作成した単元</h1>
+    <h1 class="display-4">新規アカウント作成</h1>
     <hr class="my-2">
-    編集したい単元を選択してください。
+    学年１つに対し、１つのアカウントを割り振ります。新規アカウントを登録した後は管理者からメールで承認がくるまでお待ちください。
   </div>
   <form method="POST" id="content_form">
     {{form.hidden_tag()}}
