--- a/hktm/users/templates/users/list.html
+++ b/hktm/users/templates/users/list.html
@@ -9,7 +9,7 @@
   </div>
   <div class="list-group" role="tablist">
     {% for user in users %}
-        <a class="list-group-item list-group-item-action" id=list-{{user.id}} href="{{ url_for('users.admin_user_edit',id=user.id) }}">{{ user.email }}</a>
+        <a class="list-group-item list-group-item-action" id=list-{{user.id}} href="{{ url_for('users.admin_user_edit',id=user.id) }}">{{user.name}} ({{ user.email }})</a>
     {% endfor %}
   </div>
   <br>
