Japanese translation for 3rd grade test and render fix

--- a/hktm/lesson_contents/templates/lesson_contents/KT36_content.html
+++ b/hktm/lesson_contents/templates/lesson_contents/KT36_content.html
@@ -11,7 +11,7 @@
     漢字穴埋め問題は、「」を使う。例）「みなみ」<br>
     読み仮名問題は、（）を使う。例）（音読）　注意：括弧内はスペースで長さ調節可能<br>
     漢字とふりがな混合問題は、｛｝を使う。例）｛かく｝注意：括弧内はスペースで長さ調節可能<br>
-    something about bonus questions using ＜＞ as in ＜letters＞<br>
+    ボーナス問題は、 ＜＞を使う。例）  ＜こまかい＞<br>
   </p>
   </div>
 {% endblock head%}
