--- a/hktm/templates/chrome.html
+++ b/hktm/templates/chrome.html
@@ -23,15 +23,15 @@
             <a class="nav-link" href="{{ url_for('root.home') }}">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('lessons.list') }}">単元</a>
+            <a class="nav-link" href="{{ url_for('lessons.list') }}">{{ gettext('Lessons')}}</a>
           </li>
           {% if 'A' in current_user.grades %}
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('users.admin_list_users') }}">管理者ページ</a>
+            <a class="nav-link" href="{{ url_for('users.admin_list_users') }}">{{ gettext('Accounts')}}</a>
           </li>
           {% endif %}
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">構成</a>
+            <a class="nav-link disabled" href="#">{{ gettext('Configuration')}}</a>
           </li>
         </ul>
         {# <form class="form-inline my-2 my-lg-0">
