--- a/hktm/templates/index.html
+++ b/hktm/templates/index.html
@@ -20,7 +20,7 @@
 
     <div class="container">
       <div class="jumbotron">
-        <h1 class="display-5">補習校漢字テスト・宿題プリント生成ソフト</h1>
+        <h1 class="display-5">{{_('Hoshuko Kanji Materials')}}</h1>
         <hr class="my-4">
       </div>
 
@@ -54,7 +54,7 @@
       <div class="row py-3">
         <div class="col-sm-6 float-left">
           {{form.submit(class='btn btn-primary')}}
-          <a href="{{url_for('users.register')}}" class="btn btn-primary btn active" role="button" aria-pressed="true">新規アカウントを作成する。</a>
+          <a href="{{url_for('users.register')}}" class="btn btn-primary btn active" role="button" aria-pressed="true">{{_('New Teacher Account...')}}</a>
         </div>
       </div>
     </form>
