--- a/hktm/templates/home.html
+++ b/hktm/templates/home.html
@@ -6,7 +6,7 @@
   <div class="jumbotron">
     <h1 class="display-5">補習校漢字テスト・宿題プリント生成ソフト</h1>
     <hr class="my-4">
-    <p>新規作成または、既存のプリント名をクリックしてください。</p>
+    <p>新規作成または、既存の単元名をクリックしてください。</p>
 
     <div class="list-group" role="tablist">
       {% for lesson in lessons %}
