--- a/hktm/lessons/templates/lessons/add_lesson.html
+++ b/hktm/lessons/templates/lessons/add_lesson.html
@@ -3,9 +3,9 @@
 {% block content %}
 <div class="container">
   <div class="jumbotron">
-    <h1 class="display-4">新規作成</h1>
+    <h1 class="display-4">{{_('Add Lesson')}}新規作成</h1>
     <hr class="my-2">
-    <p>学期と単元名を入力してください。例）1学期　単元１．ふきのとう　の場合、1－1ふきのとう</p>
+    <p>{{_('This is where you can add lessons.  A lesson is a collection of worksheets.  Please use the format #-# for the naming')}}学期と単元名を入力してください。例）1学期　単元１．ふきのとう　の場合、1－1ふきのとう</p>
   </div>
   <form method="POST">
     <div class="column">
@@ -19,7 +19,7 @@
                 <li class="alert alert-danger" style="margin: 3px">{{ error }}</li>
               {% endfor %}
             </ul>
-          {% endif %}          
+          {% endif %}
           {{form.grade.label}}
           {{form.grade(class='form-control')}}
         </div>
