more babel fixes for testing

--- a/hktm/lesson_contents/templates/lesson_contents/add_lesson_contents.html
+++ b/hktm/lesson_contents/templates/lesson_contents/add_lesson_contents.html
@@ -37,8 +37,8 @@ function print_preview(){
             {{form.submit(class='btn btn-primary')}}
           </div>
           <div class="col-xl-9">
-            <button type="button" class="btn btn-secondary float-right" onclick="print_preview();">プリントビュー</button>
-            <button type="button" class="btn btn-secondary float-right mr-2" onclick="preview();">プリビュー</button>
+            <button type="button" class="btn btn-secondary float-right" onclick="print_preview();">{{_('Preview')}}</button>
+            <button type="button" class="btn btn-secondary float-right mr-2" onclick="preview();">{{_('Page Preview')}}</button>
           </div>
         </div>
       </div>
