most of localization is complete looking for left overs

--- a/hktm/lesson_contents/templates/lesson_contents/KJWR_content.html
+++ b/hktm/lesson_contents/templates/lesson_contents/KJWR_content.html
@@ -2,11 +2,11 @@
 {% block head %}
 
   <div class="jumbotron">
-    <h1 class="display-4">漢字文章プリント編集</h1>
+    <h1 class="display-4">{{_('Kanji Writing Worksheet')}}</h1>
     <hr class="my-2">
     <p>
-    文章を書いたら、必要なマス目の数を入力してください。<br>
-    例）いけんをいう。｜７
+      {{_('Instructions for Kanji Writing Worksheet')}}
+
   </p>
   </div>
 {% endblock head%}
