--- a/hktm/lesson_contents/templates/lesson_contents/NWRD_content.html
+++ b/hktm/lesson_contents/templates/lesson_contents/NWRD_content.html
@@ -2,11 +2,10 @@
 {% block head %}
 
   <div class="jumbotron">
-    <h1 class="display-4">漢字読みプリント編集</h1>
+    <h1 class="display-4">{{_('Kanji New Reading Worksheet')}}</h1>
     <hr class="my-2">
     <p>
-    番号を振って、読みの問題を作成します。括弧内に漢字を入れてください。例）①　（竹　）やぶ
-    注意：括弧内はスペースで長さ調節可能
-  </p>
+      {{_('Instructions for Kanji New Reading Worksheet')}}
+    </p>
   </div>
 {% endblock head%}
