--- a/hktm/lesson_contents/templates/lesson_contents/TRCP_content.html
+++ b/hktm/lesson_contents/templates/lesson_contents/TRCP_content.html
@@ -2,8 +2,8 @@
 {% block head %}
 
   <div class="jumbotron">
-    <h1 class="display-4">漢字なぞりプリント編集</h1>
+    <h1 class="display-4">{{_('Kanji Tracing Worksheet')}}</h1>
     <hr class="my-2">
-    なぞり書きさせる漢字をスペースなしで記載してください。
+    {{_('Instructions for Kanji Tracing Worksheet')}}
   </div>
 {% endblock head%}
