--- a/hktm/lesson_contents/templates/lesson_contents/KJTS_content.html
+++ b/hktm/lesson_contents/templates/lesson_contents/KJTS_content.html
@@ -16,13 +16,12 @@ function print_preview(){
 {% block head %}
 
   <div class="jumbotron">
-    <h1 class="display-4">漢字テスト編集</h1>
+    <h1 class="display-4">{{_('Kanji Test Worksheet - Grades 2 and 3')}}</h1>
 
     <hr class="my-2">
     <p>
-    漢字穴埋め問題は、「」を使う。例）「みなみ」<br>
-    読み仮名問題は、（）を使う。例）（音読）　注意：括弧内はスペースで長さ調節可能<br>
-    漢字とふりがな混合問題は、｛｝を使う。例）｛かく｝注意：括弧内はスペースで長さ調節可能
+      {{_('Instructions for Kanji Test Worksheet for grades 2 and 3')}}
+
   </p>
   </div>
 {% endblock head%}
