added dates to custom template content, fixed translations

--- a/hktm/lesson_contents/templates/lesson_contents/add_lesson_contents.html
+++ b/hktm/lesson_contents/templates/lesson_contents/add_lesson_contents.html
@@ -55,6 +55,10 @@ $('#myModal').on('shown.bs.modal', function () {
         <div class="form-group">
           {{form.name.label}}
           {{form.name(class='form-control')}}
+          {% if form.date != None %}
+          {{form.date.label}}
+          {{form.date(class='form-control')}}
+          {% endif %}
         </div>
       </div>
     </div>
