--- a/hktm/lesson_contents/templates/lesson_contents/KT36_print_container.html
+++ b/hktm/lesson_contents/templates/lesson_contents/KT36_print_container.html
@@ -21,7 +21,11 @@
           </div>
 
           <div class='header_score_box'>
-            1*10
+            １つ10てん<br/>
+            <div class='slash'>/</div><br/>
+
+            <span style="float: right">100てん</span>
+
           </div>
         </div>
         <div class='header-instructions' style="margin-right: -18px">
