Updates to test layouts and font sizes

--- a/hktm/lesson_contents/templates/lesson_contents/KT36_print_container.html
+++ b/hktm/lesson_contents/templates/lesson_contents/KT36_print_container.html
@@ -10,7 +10,7 @@
         <div class='header_graphics'>
           <div style="font-size:50%">
             <div style="text-align: right; padding-bottom: 10px;">{{content.date}}</div>
-            <div class='header_frame'>
+            <div class='header_no_frame'>
               <div>
                 {{content.name}}
               </div>
