--- a/hktm/static/questions.css
+++ b/hktm/static/questions.css
@@ -13,15 +13,16 @@
     font-weight: normal;
     font-style: normal;
 }
-
+:root{
+  --hiragana-s-margin: 20px;
+}
 /* Page and containers */
 .page{
   font-family: Kyokasho;
   display: flex;
   flex-direction: column-reverse;
-  font-size: 35px;
+  font-size: 20pt;
   writing-mode: vertical-lr;
-  --colwidth: 60px;
 }
 
 .preview-frame{
@@ -31,9 +32,8 @@
 .preview{
   display: flex;
   flex-direction: column-reverse;
-  font-size: 40px;
   writing-mode: vertical-lr;
-  --colwidth: 70px;
+  --colwidth: 65px;
   font-family: Kyokasho;
 }
 
@@ -46,11 +46,9 @@
   margin-left: -40px;
   margin-top: 0px;
 }
-.preview .hiragana{
+.Xpreview .hiragana{
   padding-left: 7px;
-  Xletter-spacing: 0.3em;
   display: grid;
-  grid-template-rows: var(--colwidth) 30px;
 }
 .preview .kanji_reading{
   padding-left: 7px;
@@ -69,18 +67,19 @@
 }
 
 /* Reading part of a question */
-.kanji_reading-60{
+.kanji_reading-70{
   font-weight: bold;
   display: grid;
   grid-template-rows: var(--colwidth) 30px;
 }
-.kanji_reading-60{
+.kanji_reading-70{
   font-weight: bold;
   display: grid;
   grid-template-rows: 50px 30px;
-  margin-left: 5px;
+  margin-left: 11px;
+  font-size: 30pt;
 }
-.kanji_reading_brackets-60{
+.kanji_reading_brackets-70{
   display: grid;
   grid-template-columns: 20px auto 20px
 }
@@ -112,14 +111,14 @@
   text-align: center;
 }
 .furigana{
-  font-size: 20px;
+  font-size: 14pt;
   line-height: 1em;
   text-align: center;
 }
 
 
 /* Combo question part (combining hiragana and kanji) */
-.combo_question-60{
+.combo_question-70{
   line-height: 1em;
   display: grid;
   grid-template-rows: 70px 30px;
@@ -137,7 +136,6 @@
   text-align: center;
   display:table;
 }
-
 .furigana-combo-row{
   display:table-cell;
 }
@@ -146,21 +144,21 @@
 /* Bonus question specific formating */
 .kanji_bonus{
   border-right: 1px black dashed;
-  width: 50px;
-  margin-left: 6px;
-  font-size: 90%;
+  width: 32px;
+  margin-left: var(--hiragana-s-margin);
+  font-size: 18pt;
 }
 
 
 /* Standard part of the question */
 .hiragana{
-  font-size: 90%;
+  font-size: 18pt;
+  padding-left: var(--hiragana-s-margin);
   text-align: center;
   display: grid;
   grid-template-rows: var(--colwidth) 30px;
   white-space: nowrap;
 }
-
 .hiragana-90{
   font-size: 90%;
   text-align: center;
@@ -175,22 +173,19 @@
 
 
 /* furigana */
-.kanji-w-furi-60{
-  font-size: 90%;
-  margin-left: 6px;
+.kanji-w-furi-70{
+  font-size: 18pt;
+  margin-left: var(--hiragana-s-margin);
 }
-
-.kanji-w-furi-furi-60{
-  font-size: 20px;
+.kanji-w-furi-furi-70{
+  font-size: 10pt;
   line-height: 1em;
   text-align: center;
 }
-
 .kanji-w-furi-90{
   font-size: 90%;
   margin-left: 25px;
 }
-
 .kanji-w-furi-furi-90{
   font-size: 20px;
   line-height: 1em;
@@ -203,14 +198,13 @@
   color: #DDDDDD
 }
 
+/* test header formatting */
 .header{
   writing-mode: tb;
 }
-
 .header_graphics{
   display: flex;
 }
-
 .header_frame{
   border: 3px black solid;
   border-radius: 15px;
@@ -220,7 +214,14 @@
   font-size: 20px;
   padding: 12px;
 }
-
+.header_no_frame{
+  display: grid;
+  grid-template-columns: 400px auto;
+  width: 27px;
+  font-size: 18pt;
+  padding: 12px;
+  font-weight: bold;
+}
 .header_score_box{
   border: 3px black solid;
   width: 75px;
@@ -238,7 +239,6 @@
   margin-bottom: -43px;
   margin-right: 2px;
 }
-
 .header-instructions{
   font-size: 20px;
   padding: 15px 10px 0px 20px;
@@ -257,11 +257,9 @@
   text-align: center;
   padding-left: 17px;
 }
-
 .trcp_empty{
   border-top: 1px solid black;
 }
-
 
 .kjwr_question{
   width: 100px;
