--- a/hktm/lesson_contents/templates/lesson_contents/add_lesson_contents.html
+++ b/hktm/lesson_contents/templates/lesson_contents/add_lesson_contents.html
@@ -10,7 +10,7 @@ function preview(){
 
 function print_preview(){
   form = document.forms['content_form'];
-  window.open('/lesson_contents/print_factory/{{content_id}}', '_blank', 'height=772,width=1000,scrollbars=yes');
+  window.open('/lesson_contents/print_factory/{{content_id}}', '_blank', 'height=772,width=975,scrollbars=no');
 }
 </script>
 {% endblock scripts %}
