Update to kanji test class structure

--- a/hktm/lesson_contents/templates/lesson_contents/KTG2_content.html
+++ b/hktm/lesson_contents/templates/lesson_contents/KTG2_content.html
@@ -4,11 +4,11 @@
 {% block head %}
 
   <div class="jumbotron">
-    <h1 class="display-4">{{_('Kanji Test Worksheet - Grades 2 and 3')}}</h1>
+    <h1 class="display-4">{{_('Kanji Test Worksheet - Grade 2')}}</h1>
 
     <hr class="my-2">
     <p>
-      {{_('Instructions for Kanji Test Worksheet for grades 2 and 3')}}
+      {{_('Instructions for Kanji Test Worksheet for grade 2')}}
 
   </p>
   </div>
