--- a/hktm/static/questions.css
+++ b/hktm/static/questions.css
@@ -268,6 +268,7 @@
   border-top: 1px solid black;
   text-align: center;
   padding-left: 17px;
+  font-size: 32pt;
 }
 .trcp_empty{
   border-top: 1px solid black;
