--- a/hktm/lesson_contents/templates/lesson_contents/K362_content.html
+++ b/hktm/lesson_contents/templates/lesson_contents/K362_content.html
@@ -4,7 +4,7 @@
 {% block head %}
 
   <div class="jumbotron">
-    <h1 class="display-4">{{_('Kanji Test Worksheet - Grades 3-6')}}</h1>
+    <h1 class="display-4">{{_('Kanji Test Worksheet - Grades 3-6 - Page 2')}}</h1>
 
     <hr class="my-2">
     <p>
