--- a/hktm/lesson_contents/templates/lesson_contents/KTG1_print_container.html
+++ b/hktm/lesson_contents/templates/lesson_contents/KTG1_print_container.html
@@ -43,7 +43,7 @@
           {% endif %}
         </div>
         <div class='header-instructions' style="margin-right: -18px">
-          （　）に読みを書きましょう。<br> □に漢字を、［　］には漢字とひらがなを書きましょう。
+          （　）に　読みを　かきましょう。<br> □に　かん字を、［　］には　かん字と　ひらがなを　かきましょう。
         </div>
       </div>
       <div class='content'>
